# NplOSRenderDev

./: CMakeLists.txt  README.md  create-solution.bat
NplOSRenderPlugin/: CMakeLists.txt
NplOSRenderPlugin/src/: NplOSRender.cpp  NplOSRender.h  NplOSRenderImporter.cpp
libpng/lib/: libpng.lib  zlib.lib
osmesa/lib/: osmesa.lib  zlib.lib
osmesa/util/: Makefile.in
